still trying to setup autotesting

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,5 @@ jobs:
 
     steps:
     - name: make check
-      run: sudo apt install bison glex gcc make
-      run: make check
+      run: sudo apt install -y bison glex gcc make && make check
 
