--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -1,17 +1,16 @@
-name: Run make check
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: make check
-      run: git clone https://github.com/reginaldford/sms && cd sms && make check
+    - name: Clone repository
+      run: git clone https://github.com/reginaldford/sms
+
+    - name: Initialize and update submodules
+      working-directory: ./sms
+      run: git submodule update --recursive --init
+
+    - name: Run make check
+      working-directory: ./sms
+      run: make check
 
