--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -1,3 +1,11 @@
+name: make check test
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
